fixed overflowing of long texts

--- a/static/css/chatbauble.css
+++ b/static/css/chatbauble.css
@@ -2,6 +2,8 @@
     font-size: 16px;
     padding: 15px;
     width: fit-content;
+
+    overflow-wrap: break-word;
     margin-bottom: 20px;
 }
 
